--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -11,64 +11,58 @@
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
   ShortTitle={CDF},
   note={Definition},
-  pages={26},
-  version={1501}
+  pages={29},
+  version={1.5.1}
 }
 
+@book{cdfP,
+  title={three conditions of c.d.f.},
+  ShortTitle={CDF},
+  note={Theorem},
+  pages={31},
+  version={1.5.3}
+}
+
+
 @book{PDF,
-  title={probability density function},
+  title={probability density function $F_X(x)=P_X(X= x)$},
   ShortTitle={PDF},
   note={Definition},
-  pages={},
-  version={}
+  pages={34},
+  version={1.6.1}
 }
 
 @book{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
   ShortTitle={mean},
   note={Definition},
-  pages={50},
-  version={2201}
+  pages={55},
+  version={2.2.1}
 }
 
 @book{Var,
-  title={variance},
+  title={variance $Var[X]=E(X-EX)^2$},
   ShortTitle={Var},
   note={Definition},
   pages={},
-  version={}
+  version={2.3.2}
 }
 
-@book{Cor,
-  title={correlation},
-  ShortTitle={Cor},
+@book{MGF,
+  title={moment generating function},
+  ShortTitle={MGF},
   note={Definition},
   pages={},
-  version={}
+  version={2.3.6}
 }
 
-@book{Cov,
-  title={covariance},
-  ShortTitle={Cov},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{Unif,
-  title={Uniform distribution (a,b)},
-  ShortTitle={Unif},
-  note={Distribution},
-  pages={},
-  version={}
-}
 
 @book{Bern,
   title={Bernoulli distribution (p)},
   ShortTitle={Bern},
   note={Distribution},
   pages={},
-  version={}
+  version={3.2.1}
 }
 
 @book{Bino,
@@ -76,64 +70,57 @@
   ShortTitle={Bino},
   note={Distribution},
   pages={},
-  version={}
+  version={3.2.2}
 }
+
 
 @book{Pois,
   title={Poisson distribution $\lambda$},
   ShortTitle={Pois},
   note={Distribution},
   pages={84},
-  version={3203}
+  version={3.2.5}
 }
 
-@book{SNorm,
-  title={Standard Normal distribution},
-  ShortTitle={SNorm},
+@book{Geom,
+  title={Geometric Distribution},
+  ShortTitle={Pois},
+  note={Distribution},
+  pages={84},
+  version={3.2.11}
+}
+
+@book{failtime,
+  title={Failure times},
+  ShortTitle={failtime},
+  note={Definition},
+  pages={},
+  version={3.2.7}
+}
+
+
+@book{Unif,
+  title={Uniform distribution (a,b)},
+  ShortTitle={Unif},
   note={Distribution},
   pages={},
-  version={}
+  version={3.3.1}
 }
-
-@book{Norm,
-  title={Normal distribution},
-  ShortTitle={Norm},
-  note={Distribution},
-  pages={},
-  version={}
-}
-
 
 @book{Gamma,
   title={Gammal distribution},
   ShortTitle={Gamma},
   note={Distribution},
   pages={},
-  version={}
-}
-
-@book{Beta,
-  title={Beta distribution},
-  ShortTitle={Beta},
-  note={Distribution},
-  pages={},
-  version={}
+  version={3.3.6}
 }
 
 @book{Expo,
   title={Exponential distribution $\lambda$},
   ShortTitle={Expo},
   note={Distribution},
-  pages={90},
-  version={3301}
-}
-
-@book{t,
-  title={t distribution},
-  ShortTitle={t},
-  note={Distribution},
-  pages={},
-  version={}
+  pages={101},
+  version={3.3.11}
 }
 
 @book{Weib,
@@ -141,15 +128,55 @@
   ShortTitle={Weib},
   note={Distribution},
   pages={},
-  version={}
+  version={3.3.12}
+}
+
+@book{Norm,
+  title={Normal distribution},
+  ShortTitle={Norm},
+  note={Distribution},
+  pages={},
+  version={3.3.13}
+}
+
+@book{SNorm,
+  title={Standard Normal distribution},
+  ShortTitle={SNorm},
+  note={Distribution},
+  pages={},
+  version={3.3.13}
+}
+
+@book{Beta,
+  title={Beta distribution $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n=\frac{B(\alpha+n,\beta)}{B(\alpha,\beta)}=\frac{Gamma(\alpha+n)+Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)Gamma(\alpha)}$, $EX=\frac{\alpha}{\alpha+\beta}$, $VarX=\frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}$},
+  ShortTitle={Beta},
+  note={Distribution},
+  pages={},
+  version={3.3.16}
+}
+
+@book{Cauchy,
+  title={Cauchy Distribution},
+  ShortTitle={Cauchy},
+  note={Distribution},
+  pages={},
+  version={3.3.19}
+}
+
+@book{LNorm,
+  title={Lognormal Distribution},
+  ShortTitle={LNorm},
+  note={Distribution},
+  pages={},
+  version={3.3.21}
 }
 
 @book{Laplace,
-  title={Laplace distribution},
+  title={Laplace/Double Exponential distribution $EX=\mu,VarX=2\sigma^2$},
   ShortTitle={Laplace},
   note={Distribution},
   pages={},
-  version={}
+  version={3.3.22}
 }
 
 @book{SPower,
@@ -160,20 +187,28 @@
   version={}
 }
 
-@book{lifetime,
-  title={lifetime},
-  ShortTitle={lifetime},
-  note={Definition},
-  pages={},
-  version={}
+@book{Cheb,
+  title={Chebychev inequality},
+  ShortTitle={Cheb},
+  note={Theorem},
+  pages={122},
+  version={3.6.1}
 }
 
-@book{MGF,
-  title={moment generating function},
-  ShortTitle={MGF},
+@book{GammaE,
+  title={$E[X^k]=\frac{\beta^k\Gamma(k+\alpha)}{\Gamma(\alpha)}$},
+  ShortTitle={GammaE},
+  note={Property},
+  pages={},
+  version={3.E.17}
+}
+
+@book{marg,
+  title={marginal probability density functions},
+  ShortTitle={marg},
   note={Definition},
   pages={},
-  version={}
+  version={4.1.3}
 }
 
 @book{joint,
@@ -181,167 +216,15 @@
   ShortTitle={joint},
   note={Definition},
   pages={},
-  version={}
+  version={4.1.10}
 }
 
 @book{cond,
-  title={conditional pdf},
+  title={Calculating conditional pdfs},
   ShortTitle={cond},
   note={Definition},
   pages={},
-  version={}
-}
-
-@book{marg,
-  title={marginal pdf},
-  ShortTitle={marg},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{trans,
-  title={transformation},
-  ShortTitle={trans},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{Cheb,
-  title={Chebychev inequality},
-  ShortTitle={Cheb},
-  note={Theorem},
-  pages={111},
-  version={3601}
-}
-
-@book{HypoT,
-  title={Hypothesis Test},
-  ShortTitle={HypoT},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{power,
-  title={power function },
-  ShortTitle={power},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{LRT,
-  title={likelihood ratio test},
-  ShortTitle={LRT},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{MOM,
-  title={Method of Moments},
-  ShortTitle={MOM},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{MLE,
-  title={Maximum Likelihood Estimators},
-  ShortTitle={MLE},
-  note={Definition},
-  pages={315},
-  version={7202}
-}
-
-@book{MSE,
-  title={mean-squared error},
-  ShortTitle={MSE},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{BayesE,
-  title={Bayes estimator},
-  ShortTitle={BayesE},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{FishI,
-  title={Fisher information},
-  ShortTitle={FishI},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{CI,
-  title={confidence interval},
-  ShortTitle={CI},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{CRLB,
-  title={Cramer-Rao Lower Bound},
-  ShortTitle={CRLB},
-  note={Definition},
-  pages={335(361)},
-  version={}
-}
-
-@book{suff,
-  title={sufficient statistic},
-  ShortTitle={suff},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{comp,
-  title={complete},
-  ShortTitle={comp},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{unbias,
-  title={unbiased estimator},
-  ShortTitle={unbias},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{effi,
-  title={efficient},
-  ShortTitle={effi},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{consi,
-  title={consistent},
-  ShortTitle={cons},
-  note={Definition},
-  pages={},
-  version={}
-}
-
-@book{asym,
-  title={asymptotic},
-  ShortTitle={asym},
-  note={Definition},
-  pages={},
-  version={}
+  version={4.2.4}
 }
 
 @book{indep,
@@ -349,7 +232,95 @@
   ShortTitle={indep},
   note={Definition},
   pages={},
-  version={}
+  version={4.2.5}
+}
+
+@book{trans,
+  title={transformation},
+  ShortTitle={trans},
+  note={Definition},
+  pages={},
+  version={4.3.1}
+}
+
+@book{Cor,
+  title={correlation $\rho_{XY}=\frac{Cov(X,Y)}{\sigma_X\sigma_Y}$},
+  ShortTitle={Cor},
+  note={Definition},
+  pages={},
+  version={4.5.2}
+}
+
+@book{Cov,
+  title={covariance $Cov(X,Y)=E[(X-\mu_X)(Y-\mu_Y)]=E[XY]-\mu_X\mu_Y$},
+  ShortTitle={Cov},
+  note={Definition},
+  pages={},
+  version={4.5.1-3}
+}
+
+@book{Dirichlet,
+  title={Dirichlet distribution $f(x,y)=Cx^{a-1}y^{b-1}(1-x-y)^{c-1}$},
+  ShortTitle={Dirichlet},
+  note={Distribution},
+  pages={},
+  version={4.E.40}
+}
+
+@book{t,
+  title={t distribution},
+  ShortTitle={t},
+  note={Distribution},
+  pages={},
+  version={5.3.4}
+}
+
+@book{F,
+  title={F distribution},
+  ShortTitle={t},
+  note={Distribution},
+  pages={},
+  version={5.3.6}
+}
+
+@book{lifetime,
+  title={Exponential lifetime},
+  ShortTitle={lifetime},
+  note={Definition},
+  pages={},
+  version={5.6.1}
+}
+
+@book{suff,
+  title={sufficient statistic},
+  ShortTitle={suff},
+  note={Definition},
+  pages={},
+  version={6.2.1}
+}
+
+@book{facto,
+  title={Factorization Theorem},
+  ShortTitle={facto},
+  note={Theorem},
+  pages={},
+  version={6.2.6}
+}
+
+@book{ancillary,
+  title={Ancillary Statistics},
+  ShortTitle={ancillary},
+  note={Definition},
+  pages={},
+  version={6.2.16}
+}
+
+@book{comp,
+  title={complete statistic},
+  ShortTitle={comp},
+  note={Definition},
+  pages={},
+  version={6.2.21}
 }
 
 @book{Basu,
@@ -357,7 +328,47 @@
   ShortTitle={Basu},
   note={Theorem},
   pages={262},
-  version={6224}
+  version={6.2.24-7}
+}
+
+@book{MOM,
+  title={Method of Moments},
+  ShortTitle={MOM},
+  note={Definition},
+  pages={},
+  version={7.2.1}
+}
+
+@book{MLE,
+  title={Maximum Likelihood Estimators},
+  ShortTitle={MLE},
+  note={Definition},
+  pages={316},
+  version={7.2.4}
+}
+
+@book{MSE,
+  title={mean squared error},
+  ShortTitle={MSE},
+  note={Definition},
+  pages={},
+  version={7.3.1}
+}
+
+@book{unbias,
+  title={bias and unbiased estimator},
+  ShortTitle={unbias},
+  note={Definition},
+  pages={},
+  version={7.3.2}
+}
+
+@book{BayesE,
+  title={Bayes estimator},
+  ShortTitle={BayesE},
+  note={Definition},
+  pages={},
+  version={7.2.3}
 }
 
 @book{MVUE,
@@ -365,15 +376,95 @@
   ShortTitle={MVUE},
   note={Definition},
   pages={},
-  version={}
+  version={7.3.7}
 }
 
 @book{UMVUE,
   title={uniform minimum variance unbiased estimator},
   ShortTitle={UMVUE},
   note={Definition},
-  pages={304--305},
-  version={7307}
+  pages={334},
+  version={7.3.7}
+}
+
+@book{CRLB,
+  title={Cramer-Rao Lower Bound},
+  ShortTitle={CRLB},
+  note={Definition},
+  pages={337},
+  version={7.3.9-10}
+}
+
+@book{FishI,
+  title={Fisher information},
+  ShortTitle={FishI},
+  note={Definition},
+  pages={},
+  version={7.3.10}
+}
+
+@book{Rao-Bla),
+  title={Rao-Blackwell},
+  ShortTitle={Rao-Bla},
+  note={Theorem},
+  pages={},
+  version={7.3.17}
+}
+
+@book{Lehm-Sche),
+  title={Lehmann-Scheffe},
+  ShortTitle={Lehm-Sche},
+  note={Theorem},
+  pages={},
+  version={7.5.1}
+}
+
+@book{HypoT,
+  title={Hypothesis Test},
+  ShortTitle={HypoT},
+  note={Definition},
+  pages={},
+  version={8.1.1-3}
+}
+
+@book{LRT,
+  title={likelihood ratio test},
+  ShortTitle={LRT},
+  note={Definition},
+  pages={},
+  version={8.2.1}
+}
+
+@book{BayesT,
+  title={Bayesian Tests},
+  ShortTitle={BayesT},
+  note={Definition},
+  pages={},
+  version={8.2.2}
+}
+
+@book{suff&LRT,
+  title={Hypothesis Test},
+  ShortTitle={suff&LRT},
+  note={Theorem},
+  pages={},
+  version={8.2.4}
+}
+
+@book{Norm&Bayes,
+  title={Normal Bayesian test},
+  ShortTitle={LRT},
+  note={Example},
+  pages={},
+  version={8.2.7}
+}
+
+@book{power,
+  title={power function },
+  ShortTitle={power},
+  note={Definition},
+  pages={},
+  version={8.3.1}
 }
 
 @book{UMP,
@@ -381,7 +472,15 @@
   ShortTitle={UMP},
   note={Definition},
   pages={388},
-  version={8311}
+  version={8.3.11}
+}
+
+@book{Neym-Pear,
+  title={Neyman-Pearson Lemma},
+  ShortTitle={eym-Pear},
+  note={Definition},
+  pages={388},
+  version={8.3.12-3}
 }
 
 @book{MLR,
@@ -389,14 +488,53 @@
   ShortTitle={MLR},
   note={Definition},
   pages={391},
-  version={8316}
+  version={8.3.16}
 }
 
+@book{Kar-Rub,
+  title={Karlin-Rubin},
+  ShortTitle={Kar-Rub},
+  note={Theorem},
+  pages={},
+  version={8.3.17}
+}
+
+@book{CI,
+  title={confidence coefficient; confidence interval},
+  ShortTitle={CI},
+  note={Definition},
+  pages={},
+  version={9.1.5}
+}
+
+@book{consi,
+  title={a consistent sequence of estimators of the parameter},
+  ShortTitle={cons},
+  note={Definition},
+  pages={},
+  version={10.1.1}
+}
+
+@book{effi,
+  title={efficient},
+  ShortTitle={effi},
+  note={Definition},
+  pages={},
+  version={10.1.2}
+}
 
 @book{LimD,
-  title={limiting distribution},
+  title={asymptotic variance or variance of the limit distribution},
   ShortTitle={LimD},
   note={Definition},
   pages={},
-  version={}
+  version={10.1.9}
+}
+
+@book{asym,
+  title={Asymptotic efficiency of MLEs},
+  ShortTitle={asym},
+  note={Definition},
+  pages={},
+  version={10.1.12}
 }
