--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -1589,7 +1589,7 @@ median is the $k^{th}$ order statistic, denoted by $Y_k$.
 ### 2015S4A
 [2007F4A][] [@CDF] [@cdfP]
 
-(a) Let X be a continuous type random variable with cumulative distribution function $F(x)$. Find the distribution of the random variable $Y=\ln(1-F(X))$:
+(a) Let X be a continuous type random variable with cumulative distribution function $F(x)$. Find the distribution of the random variable $Y=-\ln(1-F(X))$:
 
 $1-e^{-y}$
 
@@ -1617,7 +1617,7 @@ $F(x)=\begin{cases}0&x<0\\(\frac{x}\theta)^2& 0\le x<\theta\\1& x\ge\theta\end{c
 
 (a) Find $\hat\theta$, the mle of $\theta$. 
 
-$X_{(1)}$ or $X_{(n)}$ ?
+$X_{(n)}$ 
 
 (b) Find $E[\hat\theta]$.
 
@@ -1670,7 +1670,7 @@ Find the m.l.e. of $\theta$ and find its bias.
 Suppose $Y$ is a random variable (sample size = 1) from a population with density function
 $f(y|\theta)=\begin{cases}\theta y^{\theta-1}& 0<x<1,\theta>0\\0& o.w.\end{cases}$
 
-(a) Sketch the power function of the test of the rejection: $Y>0.05$.
+(a) Sketch the power function of the test of the rejection: $Y>0.5$.
 
 $\alpha=P_{\theta_1}(T<t_0)$
 
@@ -1690,6 +1690,7 @@ where I(.) is an indicator variable.
 (b) Sketch the graph of $S(\theta)$ as a function of $\theta$. Then describe the graph in words.
 
 (c) Find a confidence interval for $\theta$ with confidence coefficient close to 0.95.
+
 
 
 ## 2015F 
@@ -1748,20 +1749,23 @@ $f(x)$, $F(x)$, $f_{Y_{(n)}}(x)$
 
 (d) (5 pts) What is the limiting distribution of $W_1=nY_1$?
 
-[^5.5.1]
 
 
-[^5.5.1]: Maximum of uniforms
+
+[@5.5.1][Maximum of uniforms]
 
 $P(|y_{(n)}-1|\ge\varepsilon)=(1-\varepsilon)^n$
+
+$P(y_{(n)}\le1-t/n)=(1-t/n)^n\to e^{-t}$
+
+$P(y_{(n)}\le1-t/n)=P(n(1-y_n)\ge t)\to 1-e^{-t}$
+
 
 (e) (5 pts) What is the limiting distribution of $W_n=n(1-Y_n)$?
 
 p236
 
-$P(y_{(n)}\le1-t/n)=(1-t/n)^n\to e^{-t}$
 
-$P(y_{(n)}\le1-t/n)=P(n(1-y_n)\ge t)\to 1-e^{-t}$
 
 
 ### 2015F4
@@ -2017,7 +2021,9 @@ p315
 
 Bias$=E[\hat\theta]-\theta$
 
-(d) Find the asmptotic variance of your MLE in part (b), as $n\to\infty$.
+(d) Find the asymptotic variance of your MLE in part (b), as $n\to\infty$.
+
+[asymptotic variance 10.1.9] [Definition 10.1.7; Example 10.1.8 Limiting variances]
 
 $\sqrt{n}[\tau(\hat\theta)-\tau(\theta)]\to n(0,\frac{[\tau'(\theta)]^2}{I(\theta)})$
 
@@ -2074,7 +2080,7 @@ $f(\theta|Y=y)$
 
 (b) the marginal density of $Y$. (3 pts) 
 
-$f(y)\sim Norm$ 
+$f(y)\sim N(\frac{y}2,\frac12)$ 
 
 ### 2017S2
 [@trans] [@SNorm] [@Cauchy] [Example 4.3.6 Distribution of the ratio of normal variables]
@@ -2541,5 +2547,17 @@ where $\theta>-1$ is an unknown parameter.
 (d) (2 pts) What is the asymptotic distribution of $\hat\theta$?
 
 
+
+
+#
+
+## 3.1.3 try
+
+\@ref(3.1.3-try)
+
+
+## 3.1.4 try try {#Try 3.1.4}
+
+[the theorem](#Try 3.1.4)
 
 # References
