--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -1779,7 +1779,7 @@ $f(x)$, $F(x)$, $f_{Y_{(n)}}(x)$
 
 
 
-[@5.5.1][Maximum of uniforms]
+[5.5.1][Maximum of uniforms]
 
 $P(|y_{(n)}-1|\ge\varepsilon)=(1-\varepsilon)^n$
 
@@ -2573,7 +2573,6 @@ where $\theta>-1$ is an unknown parameter.
 
 (d) (2 pts) What is the asymptotic distribution of $\hat\theta$?
 
-[5.5.1]: bar
 
 
 #
@@ -2588,7 +2587,7 @@ where $\theta>-1$ is an unknown parameter.
 
 ## 3.1.4 Factional theorem {#Facto}
 
-[Factional theorem](#Facto)
+[Factional theorem][Facto]
 
 [5.5.1]
 
