--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -1776,10 +1776,11 @@ $f(x)$, $F(x)$, $f_{Y_{(n)}}(x)$
 
 (d) (5 pts) What is the limiting distribution of $W_1=nY_1$?
 
+[Facto 5.5.1](#Facto)
 
+[Facto 5.5.1](#Facto-5.5.1)
 
-
-[Facto 5.5.1][]
+[Facto 5.5.1](#Facto 5.5.1)
 
 $P(|y_{(n)}-1|\ge\varepsilon)=(1-\varepsilon)^n$
 
@@ -2577,7 +2578,7 @@ where $\theta>-1$ is an unknown parameter.
 
 #
 
-## 5.5.1 [Maximum of uniforms][Facto 5.5.1]
+## 5.5.1 Maximum of uniforms {#Facto-5.5.1}
 
 
 
